fix pom dependencies to generate jar correctly